
* Generalized Isar history, with support for linear undo, direct state
addressing etc.

* Recovered hiding of consts, which was accidentally broken in
Isabelle2007.  Potential INCOMPATIBILITY, ``hide const c'' really
makes c inaccessible; consider using ``hide (open) const c'' instead.

* Removed exotic 'token_translation' command.  INCOMPATIBILITY, use ML
interface instead.


*** Pure ***

* Goal-directed proof now enforces strict proof irrelevance wrt. sort
hypotheses.  Sorts required in the course of reasoning need to be
covered by the constraints in the initial statement, completed by the
type instance information of the background theory.  Non-trivial sort
hypotheses, which rarely occur in practice, may be specified via
vacuous propositions of the form SORT_CONSTRAINT('a::c).  For example:

  lemma assumes "SORT_CONSTRAINT('a::empty)" shows False ...

The result contains an implicit sort hypotheses as before --
SORT_CONSTRAINT premises are eliminated as part of the canonical rule
normalization.

* Changed defaults for unify configuration options:

  unify_trace_bound = 50 (formerly 25)
  unify_search_bound = 60 (formerly 30)

* Different bookkeeping for code equations:
  a) On theory merge, the last set of code equations for a particular constant
     is taken (in accordance with the policy applied by other parts of the
     code generator framework).
  b) Code equations stemming from explicit declarations (e.g. code attribute)
     gain priority over default code equations stemming from definition, primrec,
     fun etc.
  INCOMPATIBILITY.

* Global versions of theorems stemming from classes do not carry
a parameter prefix any longer.  INCOMPATIBILITY.

* Dropped locale element "includes".  This is a major INCOMPATIBILITY.
In existing theorem specifications replace the includes element by the
respective context elements of the included locale, omitting those that
are already present in the theorem specification.  Multiple assume